k8s/istio/vs_wb.yml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-service-dr
  namespace: cna
spec:
  host: product-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-service-vs
  namespace: cna
spec:
  hosts:
    - "product-service"
  http:
    - match:
       - uri:
            prefix: /
      route:
        - destination:
            host: product-service
            subset: v1
            port: 
               number: 8083
          weight: 50   
        - destination:
            host: product-service
            subset: v2
            port: 
               number: 8083                 
          weight: 50
